<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/location_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btn_add"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>